# hardware_programming_languages_and_its_practices

source/: conf.py  index.rst  pj_example_simple.tar
source/pj_bin2gray/: run.sh
source/pj_example_c_model/: .gitignore
source/pj_example_c_model/source/xkcalc/top/: CMakeLists.txt  calc.cpp
source/pj_example_c_model/source/xkcalc/top/configuration/: calc_cfg.cpp  calc_cfg.csv  calc_cfg.hpp  calc_cfg.pl  calc_cfg.rst  calc_cfg_dump.cpp  calc_cfg_proc.cpp  calc_cfg_type.hpp
source/pj_example_c_model/source/xkmsc/top/: CMakeLists.txt  msc.cpp
source/pj_example_c_model/source/xkmsc/top/configuration/: msc_cfg.cpp  msc_cfg.hpp  msc_cfg.pl  msc_cfg.rst  msc_cfg_dump.cpp  msc_cfg_proc.cpp  msc_cfg_type.hpp
source/pj_example_c_model_硬件环境_5/: .gitignore
source/pj_example_rtl/: .gitignore
source/pj_example_rtl/include/: define.vh  define_calc.vh  define_uart.vh  localparam_calc.vh
source/pj_example_rtl/include/script/: define2undef.sh  (+1 more)
source/pj_example_rtl/script/: runListCheck.sh  runListPack.sh  runListUpdate.sh
source/pj_example_rtl_modified_硬件环境_4/include/: localparam_calc.vh
source/pj_example_rtl_modified_硬件环境_4/script/: runListPack.sh
source/pj_example_rtl_modified_硬件环境_5/: .gitignore
source/pj_example_rtl_modified_硬件环境_5/include/: define_calc.vh  undef_calc.vh
source/pj_example_simple/: adder.c  adder.v  run.sh  tb_adder.v
source/pj_gray2bin/: gray2bin.v  tb_gray2bin.v
source/修订/: index.rst
source/实验课/硬件编程语言与实践 - 第00练 - 硬件环境/: index.rst
source/实验课/硬件编程语言与实践 - 第00练 - 软件环境/: index.rst
source/实验课/硬件编程语言与实践 - 第00练 - 预备实验/: index.rst
source/实验课/硬件编程语言与实践 - 第00练 - 预备练习/: index.rst
source/实验课/硬件编程语言与实践 - 第01练 - 组合逻辑设计/: cordic_sin.ipynb  divide.ipynb  divide_example.ipynb  divide_left_methods.ipynb  index.rst  sin_cordic.ipynb  sin_cordic_partial.ipynb
source/实验课/硬件编程语言与实践 - 第02练 - 时序逻辑设计/: custom_crc.m  divide_example.ipynb  index.rst  test_custom_crc.m
source/实验课/硬件编程语言与实践 - 第03练 - 常见IP之存储类/: index.rst
source/实验课/硬件编程语言与实践 - 第03练 - 常见IP之通信类/: index.rst
source/实验课/硬件编程语言与实践 - 第04练 - 常见IP之通信类/: index.rst  uart_system.vsdx
source/理论课/硬件编程语言与实践 - 第00讲 - 课程简介/: index.rst
source/理论课/硬件编程语言与实践 - 第01讲 - 引子与一些科普 - 1 - 现在/: index.rst
source/理论课/硬件编程语言与实践 - 第01讲 - 引子与一些科普 - 2 - 过去和未来/: index.rst
source/理论课/硬件编程语言与实践 - 第02讲 - 设计流程 - 1 - 设计描述/: index.rst
source/理论课/硬件编程语言与实践 - 第02讲 - 设计流程 - 2 - 设计方法/: index.rst
source/理论课/硬件编程语言与实践 - 第02讲 - 设计流程 - 3 - 设计策略/: index.rst
source/理论课/硬件编程语言与实践 - 第02讲 - 设计流程 - 4 - 设计流程/: index.rst
source/理论课/硬件编程语言与实践 - 第03讲 - 设计建模/: index.rst
source/理论课/硬件编程语言与实践 - 第03讲 - 设计建模 - 1 - 语法要素/: index.rst
source/理论课/硬件编程语言与实践 - 第03讲 - 设计建模 - 2 - 建模方法/: index.rst
source/理论课/硬件编程语言与实践 - 第03讲 - 设计建模 - 3 - 可综合建模/: index.rst
source/理论课/硬件编程语言与实践 - 第03讲 - 设计建模 - 4 - 注意事项/: index.rst
source/理论课/硬件编程语言与实践 - 第04讲 - 组合逻辑设计/: index.rst
source/理论课/硬件编程语言与实践 - 第04讲 - 组合逻辑设计 - 1 - 行为、结构域设计/: index.rst
source/理论课/硬件编程语言与实践 - 第04讲 - 组合逻辑设计 - 2 - 稍微复杂一些的电路的设计/: index.rst
source/理论课/硬件编程语言与实践 - 第04讲 - 组合逻辑设计 - 3 - 实践内容/: index.rst
source/理论课/硬件编程语言与实践 - 第04讲的补充/: index.rst
source/理论课/硬件编程语言与实践 - 第05讲 - 时序逻辑设计/: index.rst
source/理论课/硬件编程语言与实践 - 第05讲 - 时序逻辑设计 - 1 - 行为、结构域设计/: index.rst
source/理论课/硬件编程语言与实践 - 第05讲 - 时序逻辑设计 - 2 - 稍微复杂一些的电路的设计/: index.rst
source/理论课/硬件编程语言与实践 - 第05讲 - 时序逻辑设计 - 3 - 实践内容/: index.rst
source/理论课/硬件编程语言与实践 - 第05讲的补充/: index.rst
source/理论课/硬件编程语言与实践 - 第06讲 - 专题演讲/: index.rst
source/理论课/硬件编程语言与实践 - 第06讲 - 基础部分答疑/: index.rst
source/理论课/硬件编程语言与实践 - 第07讲 - 专题演讲/: index.rst
source/理论课/硬件编程语言与实践 - 第07讲 - 基础部分答疑/: index.rst
source/理论课/硬件编程语言与实践 - 第08讲 - 常见IP/: index.rst
source/理论课/硬件编程语言与实践 - 第08讲 - 常见IP - 1 - 存储类/: index.rst
source/理论课/硬件编程语言与实践 - 第08讲 - 常见IP - 2 - 通信类/: index.rst
source/理论课/硬件编程语言与实践 - 第08讲 - 常见IP - 3 - 系统类/: index.rst
source/理论课/硬件编程语言与实践 - 第08讲 - 考试题型/: index.rst
source/理论课/硬件编程语言与实践 - 第08讲的补充/: index.rst
source/理论课/硬件编程语言与实践 - 第09讲 - 常见IP - 1 - 存储类/: index.rst
source/理论课/硬件编程语言与实践 - 第09讲 - 常见IP - 2 - 通信类（A. 片内）/: index.rst
source/理论课/硬件编程语言与实践 - 第09讲 - 常见IP - 3 - 通信类（B. 片外）/: index.rst
source/理论课/硬件编程语言与实践 - 第09讲 - 常见IP - 4 - 系统类/: index.rst
source/理论课/硬件编程语言与实践 - 第09讲 - 常见IP - 5 - 实践内容/: index.rst
source/理论课/硬件编程语言与实践 - 第09讲 - 考试题型/: index.rst
source/理论课/硬件编程语言与实践 - 第09讲的补充/: index.rst
source/理论课/硬件编程语言与实践 - 第10讲 - 专用IP - 1 - 机器学习的基本概念与AI加速器/: index.rst
source/理论课/硬件编程语言与实践 - 第10讲 - 专用IP - 2 - 毫米波雷达的基本概念与雷达数字基带/: index.rst
source/理论课/硬件编程语言与实践 - 第10讲 - 专用IP - 3 - 图像及视频的基本概念与视频编码器/: index.rst
source/理论课/硬件编程语言与实践 - 第10讲 - 机器学习的基本概念与AI加速器/: index.rst
source/理论课/硬件编程语言与实践 - 第10讲 - 神经网络的基本概念与AI加速器/: index.rst
source/理论课/硬件编程语言与实践 - 第11讲 - 毫米波雷达的基本概念与雷达数字基带/: index.rst
source/理论课/硬件编程语言与实践 - 第12讲 - 图像及视频的基本概念与视频编码器/: index.rst
(+505 files in other folders)
